  Changelog for the c-ares project

* January 31 2009 (Daniel Stenberg)
- ares_gethostbyname() now accepts 'AF_UNSPEC' as a family for resolving
  either AF_INET6 or AF_INET. It works by accepting any of the looksups in the
  hosts file, and it resolves the AAAA field with a fallback to A.

* January 14 2009 (Daniel Stenberg)
- ares.h no longer uses the HAVE_STRUCT_IN6_ADDR define check, but instead it
  now declares the private struct ares_in6_addr for all systems instead of
  relying on one possibly not present in the system.

* January 13 2009 (Phil Blundell)
- ares__send_query() now varies the retry timeout pseudo-randomly to avoid
  packet storms when several queries were started at the same time.

* January 11 2009 (Daniel Stenberg)
- Phil Blundell added the internal function ares__expand_name_for_response()
  that is now used by the ares_parse_*_reply() functions instead of the
  ares_expand_name() simply to easier return ARES_EBADRESP for the cases where
  the name expansion fails as in responses that really isn't expected.

Version 1.6.0 (Dec 9, 2008)

* December 9 2008 (Gisle Vanem)

  Fixes for Win32 targets using the Watt-32 tcp/ip stack.

* Dec 4 2008 (Daniel Stenberg)

  Gregor Jasny provided the patch that introduces ares_set_socket_callback(),
  and I edited it to also get duped by ares_dup().

* Dec 3 2008 (Daniel Stenberg)

  API changes:

  I made sure the public ares_config struct looks like before and yet it
  supports the ROTATE option thanks to c-ares now storing the "optmask"
  internally. Thus we should be ABI compatible with the past release(s)
  now. My efforts mentioned below should not break backwards ABI compliance.

  Here's how I suggest we proceed with the API:

  ares_init() will be primary "channel creator" function.

  ares_init_options() will continue to work exactly like now and before. For
  starters, it will be the (only) way to set the existing options.
